kubernetes/anotherwhisk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anotherwhisk
spec:
  replicas: 1

  selector:
    matchLabels:
      app: anotherwhisk

  template:
    metadata:
      labels:
        app: anotherwhisk

    spec:
      containers: 
        - name: anotherwhisk
          image: talat74/anotherwhisk:latest

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: anotherwhisk-service
spec:
  type: LoadBalancer

  selector:
    app: anotherwhisk

  ports:
    - port: 80
      targetPort: 3000
